--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -26,4 +27,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
