--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
+    "resend": "^4.6.0",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
